fix: fixed linting issues

--- a/package.json
+++ b/package.json
@@ -59,6 +59,7 @@
     "start": "node app.js",
     "stop": "node stop.js",
     "lint": "eslint ./cli ./lib app.js forever.js",
+    "lint:fix": "eslint ./cli ./lib app.js forever.js --fix",
     "package": "node cli/package.js",
     "test": "mocha tests/*.*.integ.test.js --timeout 90000 && nyc mocha tests/*.*.unit.test.js"
   },
