chore: testing docker setup

--- a/kubernetes/docker/edgemicro/Dockerfile
+++ b/kubernetes/docker/edgemicro/Dockerfile
@@ -11,6 +11,7 @@ RUN addgroup --system --gid 101 apigee && \
 ENV NODE_ENV production
 
 RUN apt-get update && \
+    apt-get install -y build-essential && \
     apt-get install -y python && \
     apt-get install -y git 
 
