chore: docker setup changes

--- a/kubernetes/docker/edgemicro/Dockerfile
+++ b/kubernetes/docker/edgemicro/Dockerfile
@@ -25,11 +25,10 @@ RUN chown -R apigee:apigee /opt/apigee/microgateway
 
 USER apigee
 WORKDIR /opt/apigee
-RUN mkdir /opt/apigee/.edgemicro && mkdir /opt/apigee/logs && mkdir /opt/apigee/plugins && mkdir /opt/apigee/source
+RUN mkdir /opt/apigee/.edgemicro && mkdir /opt/apigee/logs && mkdir /opt/apigee/plugins
 VOLUME /opt/apigee/.edgemicro
 VOLUME /opt/apigee/logs
 VOLUME /opt/apigee/plugins
-VOLUME /opt/apigee/source
 
 # copy tls files if needed
 # COPY key.pem /opt/apigee/.edgemicro
